[package]
name = "differy"
version = "0.0.1"
authors = ["Florian Dieminger <me@fiji-flo.de>"]
description = "diff directory trees via sha256sum"
edition = "2018"
license = "MIT"
repository = "https://github.com/fiji-flo/differy"
documentation = "https://docs.rs/crate/differy"
keywords = ["diff", "sha256sum"]
categories = ["command-line-utilities"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
async-recursion = "0.3"
clap = "2"

[dependencies.async-std]
version = "1"
features = ["attributes"]