[package]
name = "differy"
version = "0.0.11"
authors = ["Florian Dieminger <me@fiji-flo.de>"]
description = "diff directory trees via sha256sum"
edition = "2021"
license = "MIT"
repository = "https://github.com/fiji-flo/differy"
documentation = "https://docs.rs/crate/differy"
keywords = ["diff", "sha256sum"]
categories = ["command-line-utilities"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
clap = "2"
walkdir = "2"
zip = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.async-std]
version = "1"
features = ["attributes"]